compiler/tests/compiler/must_fail/t_02.mil.exp.err
tests/compiler/must_fail/t_02.mil:1:11: 1:14 error: foreign function cannot have extern modifier
extern fn test() = python print_newline;
          ^^^^
