compiler/tests/compiler/must_fail/t_02.mil
extern fn test() = python print_newline;

/*
START:CMD
ARG="print[input]"
END:CMD
*/
